--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: python
 python:
  - 2.7
- - 3.3
  - 3.4
  - 3.5
 
@@ -12,9 +11,9 @@ env:
 sudo: false
 
 matrix:
-    exclude:
-        - python: 3.3
-          env: DJANGO_VERSION="Django>=1.9,<1.10"
+  include:
+    - python: 3.3
+      env: DJANGO_VERSION="Django>=1.8,<1.9"
 
 install:
   - pip install -q $DJANGO_VERSION
