--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ python:
 env:
  - DJANGO_VERSION="Django>=1.8,<1.9"
  - DJANGO_VERSION="Django>=1.9,<1.10"
+ - DJANGO_VERSION="Django==1.10a1"
 
 sudo: false
 
@@ -14,6 +15,9 @@ matrix:
   include:
     - python: 3.3
       env: DJANGO_VERSION="Django>=1.8,<1.9"
+  allow_failures:
+    - env: DJANGO_VERSION="Django==1.10a1"
+  fast_finish: true
 
 install:
   - pip install -q $DJANGO_VERSION
