--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ python:
 env:
  - DJANGO_VERSION="Django>=1.8,<1.9"
  - DJANGO_VERSION="Django>=1.9,<1.10"
- - DJANGO_VERSION="Django==1.10a1"
+ - DJANGO_VERSION="Django==1.10b1"
 
 sudo: false
 
@@ -16,7 +16,7 @@ matrix:
     - python: 3.3
       env: DJANGO_VERSION="Django>=1.8,<1.9"
   allow_failures:
-    - env: DJANGO_VERSION="Django==1.10a1"
+    - env: DJANGO_VERSION="Django==1.10b1"
   fast_finish: true
 
 install:
