Use max-line-length=120 with flake8

--- a/flake8.cfg
+++ b/flake8.cfg
@@ -1,4 +1,4 @@
 [flake8]
-ignore = 
-max-complexity = 12
-exclude = tests.py,.tox,*.egg
+max-complexity=12
+exclude=tests.py,.tox,*.egg
+max-line-length=120
