--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,13 @@ python:
  - 2.7
  - 3.4
  - 3.5
+ - 3.6
 
 env:
  - DJANGO_VERSION="Django>=1.8,<1.9"
  - DJANGO_VERSION="Django>=1.9,<1.10"
  - DJANGO_VERSION="Django>=1.10,<1.11"
+ - DJANGO_VERSION="Django>=1.11,<2.0"
 
 sudo: false
 
