--- a/tox.ini
+++ b/tox.ini
@@ -4,14 +4,17 @@ envlist =
     py27-django18,
     py27-django19,
     py27-django110,
+    py27-django111,
     py33-django18,
     py34-django18,
     py34-django19,
     py34-django110,
+    py34-django111,
     py35-django18,
     py35-django19,
     py35-django110,
-
+    py35-django111,
+    py36-django111,
 
 [testenv]
 commands = python setup.py test
@@ -26,6 +29,8 @@ deps = django<1.10
 [django110]
 deps = django<1.11
 
+[django111]
+deps = django<1.11
 
 [testenv:py27-django18]
 basepython = python2.7
@@ -39,11 +44,13 @@ deps = {[django19]deps}
 basepython = python2.7
 deps = {[django110]deps}
 
+[testenv:py27-django111]
+basepython = python2.7
+deps = {[django111]deps}
 
 [testenv:py33-django18]
 basepython = python3.3
 deps = {[django18]deps}
-
 
 [testenv:py34-django18]
 basepython = python3.4
@@ -57,6 +64,9 @@ deps = {[django19]deps}
 basepython = python3.4
 deps = {[django110]deps}
 
+[testenv:py34-django111]
+basepython = python3.4
+deps = {[django111]deps}
 
 [testenv:py35-django18]
 basepython = python3.5
@@ -69,3 +79,11 @@ deps = {[django19]deps}
 [testenv:py35-django110]
 basepython = python3.5
 deps = {[django110]deps}
+
+[testenv:py35-django111]
+basepython = python3.5
+deps = {[django111]deps}
+
+[testenv:py35-django111]
+basepython = python3.6
+deps = {[django111]deps}
