Restructure test setup
- Simplified tox file structure using a test matrix
- Travis CI now uses tox, which should improve build failure
reproducability
- Test against Django versions up to 2.1.x
- Stop testing against old insecure Django versions
- Updated README accordingly

--- a/tox.ini
+++ b/tox.ini
@@ -1,89 +1,21 @@
 [tox]
 downloadcache = {toxworkdir}/cache/
 envlist =
-    py27-django18,
-    py27-django19,
-    py27-django110,
-    py27-django111,
-    py33-django18,
-    py34-django18,
-    py34-django19,
-    py34-django110,
-    py34-django111,
-    py35-django18,
-    py35-django19,
-    py35-django110,
-    py35-django111,
-    py36-django111,
+    py{27,34,35,36}-django110
+    py{27,34,35,36}-django111
+
+    # First Django version that drops Python 2 support
+    py{34,35,36}-django20
+
+    # First Django version that drops support for Python versions below 3.5
+    py{35,36}-django21
 
 [testenv]
 commands = python setup.py test
-
-
-[django18]
-deps = django<1.9
-
-[django19]
-deps = django<1.10
-
-[django110]
-deps = django<1.11
-
-[django111]
-deps = django<1.11
-
-[testenv:py27-django18]
-basepython = python2.7
-deps = {[django18]deps}
-
-[testenv:py27-django19]
-basepython = python2.7
-deps = {[django19]deps}
-
-[testenv:py27-django110]
-basepython = python2.7
-deps = {[django110]deps}
-
-[testenv:py27-django111]
-basepython = python2.7
-deps = {[django111]deps}
-
-[testenv:py33-django18]
-basepython = python3.3
-deps = {[django18]deps}
-
-[testenv:py34-django18]
-basepython = python3.4
-deps = {[django18]deps}
-
-[testenv:py34-django19]
-basepython = python3.4
-deps = {[django19]deps}
-
-[testenv:py34-django110]
-basepython = python3.4
-deps = {[django110]deps}
-
-[testenv:py34-django111]
-basepython = python3.4
-deps = {[django111]deps}
-
-[testenv:py35-django18]
-basepython = python3.5
-deps = {[django18]deps}
-
-[testenv:py35-django19]
-basepython = python3.5
-deps = {[django19]deps}
-
-[testenv:py35-django110]
-basepython = python3.5
-deps = {[django110]deps}
-
-[testenv:py35-django111]
-basepython = python3.5
-deps = {[django111]deps}
-
-[testenv:py35-django111]
-basepython = python3.6
-deps = {[django111]deps}
+deps =
+	django18: Django >=1.8, <1.9
+	django19: Django >=1.9, <2.0
+	django110: Django >=1.10, <1.11
+	django111: Django >=1.11, <2.0
+	django20: Django >=2.0, <2.1
+	django21: Django >=2.1, <2.2
