--- a/.travis.yml
+++ b/.travis.yml
@@ -1,34 +1,23 @@
 language: python
 python:
- - 2.7
- - 3.4
- - 3.5
- - 3.6
-
-env:
- - DJANGO_VERSION="Django>=1.8,<1.9"
- - DJANGO_VERSION="Django>=1.9,<1.10"
- - DJANGO_VERSION="Django>=1.10,<1.11"
- - DJANGO_VERSION="Django>=1.11,<2.0"
+- 2.7
+- 3.4
+- 3.5
+- 3.6
 
 sudo: false
 
-matrix:
-  include:
-    - python: 3.3
-      env: DJANGO_VERSION="Django>=1.8,<1.9"
-  fast_finish: true
-
 install:
-  - pip install -q $DJANGO_VERSION
-  - pip install .
-  - pip install "flake8>=2.2.5"
-  - pip install "coverage>=3.7.1"
+- pip install tox-travis
 
 script:
-  - flake8 --config flake8.cfg .
-  - coverage run setup.py test
-  - coverage report
+- tox
+
+# Coverage data generation
+- pip install "Django<2.2" flake8 coverage codecov
+- flake8 --config flake8.cfg .
+- coverage run setup.py test
+- coverage report
 
 after_success:
-  - bash <(curl -s https://codecov.io/bash)
+- codecov
